css/style.css
/* Variables */
:root {
    --icon-size: 5rem;
    --icon-small-size: 3.5rem;
    --img-height: 500px;
    --img-border: .35rem;
    --img-padding: 4rem;
}

body[data-brightness="light"] {
    --background-color: #eff1f5;
    --surface-color: #fff;
    --text-color: #000;
    --primary-color: #4464ad;
    --on-primary-color: #fff;
    --overlay-color: rgba(0,0,0,0.1);
    --primary-overlay-color: rgba(0,0,0,0.4);
}
body[data-brightness="dark"] {
    --background-color: #000;
    --surface-color: #2a2522;
    --text-color: #fff;
    --primary-color: #e4733f;
    --on-primary-color: #fff;
    --overlay-color: rgba(255,255,255,0.1);
    --primary-overlay-color: rgba(0,0,0,0.4);
}

/* Theme Change */
* {
    transition: .15s background ease-in-out, .15s color ease-in-out;
}
body[data-brightness="light"] .dark-mode,
body[data-brightness="dark"] .light-mode {
    display: none;
}

/* Typography and misc */
body {
    margin: 0;
    background-color: var(--background-color);
    font-family: "Roboto", sans-serif;
    overflow-x: hidden;
}
li {
    color: var(--text-color);
}
a {
    text-decoration: none;
    color: var(--text-color);
    transition: .25s color ease-in-out;
}
a:hover {
    color: var(--primary-color);
}
h1 {
    font-size: 2.6rem;
    line-height: 1.1em;
    color: var(--text-color);
}
h2 {
    font-size: 1.8rem;
    line-height: 1.1em;
    color: var(--text-color);
}
h3 {
    font-size: 1.4rem;
    line-height: 1.1em;
    color: var(--text-color);
}
h4 {
    font-size: 1rem;
    line-height: 1.1em;
    color: var(--text-color);
}
p {
    font-size: 1rem;
    line-height: 1.3em;
    color: var(--text-color);
    font-weight: 300;
}
strong {
    color: var(--text-color);
    font-weight: 500;
}
img {
    display: block;
}

/* Content Wrapper */
.wrapper {
    max-width: 1000px;
    margin: 0 auto;
    padding: 0 2rem;
}

/* Top Bar */
.header {
    background-color: var(--primary-color);
}
.header .wrapper {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: space-between;
    height: 4rem;
}
.header .logo {
    width: auto;
    height: 2rem;
}
.header .toggle {
    color: var(--on-primary-color);
    cursor: pointer;
}

/* App Icon */
.icon {
    width: var(--icon-size);
    height: var(--icon-size);
    border-radius: 1rem;
}
.icon.small {
    width: var(--icon-small-size);
    height: var(--icon-small-size);
    border-radius: .7rem;
}

/* Content Sections */
.section {
    position: relative;
}
.section:nth-of-type(odd) {
    background-color: var(--background-color);
}
.section:nth-of-type(even) {
    background-color: var(--surface-color);
}
.section.main {
    background-color: var(--primary-color);
}

.section.legalese {
    padding: 1rem 0;
}

.section.flex .wrapper {
    display: flex;
    flex-wrap: nowrap;
    align-items: stretch;
    gap: 2rem;
}
.section.flex:nth-of-type(odd) .wrapper {
    flex-direction: row;
}
.section.flex:nth-of-type(even) .wrapper {
    flex-direction: row-reverse;
}
.section.legalese .wrapper {
    max-width: 800px;
}
.section .wrapper > * {
    flex: 1;
}

.section .content {
    padding: 4rem 0;
}
.section .half {
    width: 50%;
    max-width: 300px;
}
.section .title,
.section .subtitle {
    margin: 1.5rem 0;
}
.section .subtitle {
    font-size: 1.4rem;
}
.section.main .title,
.section.main .subtitle {
    color: var(--on-primary-color);
}

.section .img-container {
    position: relative;
}
.section:nth-of-type(odd) .img-container {
    padding: var(--img-padding) 0 0 0;
}
.section:nth-of-type(even) .img-container {
    padding: 0 0 var(--img-padding) 0;
}
.section .img{
    width: 300px;
    border: var(--img-border) solid var(--overlay-color);
}
.section.main .img {
    border-color: var(--primary-overlay-color);
}
.section:nth-of-type(odd) .img{
    margin: auto 0 0 auto;
    border-radius: 2rem 2rem 0 0;
    border-bottom: none;
}
.section:nth-of-type(even) .img{
    margin: auto auto 0 0;
    border-radius: 0 0 2rem 2rem;
    overflow: hidden;
    border-top: none;
}

@media screen and (max-width: 700px){
    .section.overlay::before {
        content: "";
        position: absolute;
        bottom: 0;
        width: 100%;
        height: calc(var(--img-height) + var(--img-padding) + var(--img-border));
        background-color: var(--overlay-color);
        opacity: .75;
    }
    .section.main.overlay::before {
        background-color: var(--primary-overlay-color);
    }
    .section.flex:nth-of-type(odd) .wrapper,
    .section.flex:nth-of-type(even) .wrapper {
        flex-direction: column;
        gap: 0;
    }

    .section:nth-of-type(odd) .img,
    .section:nth-of-type(even) .img {
        width: auto;
        height: var(--img-height);
        position: relative;
        margin: 0 auto;
    }
}

/* Store Badges */
.badges {
    display: flex;
    gap: 1rem;
}
.badges img {
    width: auto;
    height: 4rem;
}

/* Bottom Bar */
.footer .menu {
    margin: 2rem auto;
    list-style: none;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2rem;
}
.footer .small {
    font-size: 0.8em;
    font-weight: 300;
}

